--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,5 +1,6 @@
-<div class= "m-20 text-center text-3xl text-yellow-950">
-  sweets log
+
+<div class="flex items-center justify-center m-10">
+  <%= image_tag 'SweetsLogロゴ（縦並び）'  %>
 </div>
 <div class= "m-20 text-center text-xl text-yellow-950">
   <ul>
