--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,8 @@
 <header>
-  <nav class="flex items-center justify-between flex-wrap bg-yellow-50 p-6">
-    <div class="flex items-center flex-shrink-0 text-yellow-950 mr-6">
-      <span class="font-semibold text-2xl tracking-tight">TEST APP</span>
-    </div>
+  <nav class="flex items-center justify-between flex-wrap bg-yellow-50 p-3">
+    <div class="flex items-center justify-center">
+  <%= image_tag 'SweetsLogロゴ（横並び）', width: 250%>
+</div>
     <ul class="flex mr-4">
       <%= link_to 'HOME', '#', class: "mr-4 text-yellow-950" %>
       <%= link_to 'POSTS', '#', class: "mr-4 text-yellow-950" %>
