edit:トップページ案内部分追加

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,11 +1,13 @@
 <div class="flex items-center justify-center p-6">
   <%= image_tag 'SweetsLogロゴのみ', width: 500 %>
 </div>
-<div class= "m-20 text-center text-xl text-yellow-950 font-semibold">
+<div class= "m-6 text-center text-xl text-yellow-900 font-semibold">
   <ul>
     <li>「このスイーツ美味しかったなぁ」</li>
     <li>このような "幸せな記憶" を記録、</li>
     <li>そしてシェアできるアプリ</li>
+    <li>　</li>
+    <li>開発中です。完成をお待ちください。</li>
   </ul>
 </div>
 <div class="flex items-center justify-center">
