--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
       <%= link_to 'POSTS', '#', class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5" %>
       <%= link_to 'NEWPOST', '#', class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5" %>
       <%= link_to 'MY PAGE', '#', class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5" %>
-      <%= link_to 'LOGOUT', '#', method: :delete, class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5" %>
+      <%= button_to 'LOGOUT', destroy_user_session_path, method: :delete, class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5" %>
     </ul>
   </nav>
   <div class="flex items-center justify-center">
