--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,10 +3,8 @@
     <div class= "m-4 text-center text-3xl text-yellow-950">
       ユーザー登録
     </div>
-
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
-
+       <%= render "devise/shared/error_messages", resource: resource %>
       <div class="field">
         <%= f.label :name %><br>
         <%= f.text_field :name, class: "w-96 bg-stone-50 border border-stone-950 rounded-md",autofocus: true %>
@@ -30,7 +28,7 @@
       </div>
 
       <div class="actions flex justify-center">
-        <%= f.submit "Sign up", class: "mt-4 w-44 rounded-md bg-yellow-950 p-3 text-white focus:outline-none cursor-pointer" %>
+        <%= f.submit (t "device.registrations.new.sign_in"), class: "mt-4 w-44 rounded-md bg-yellow-950 p-3 text-white focus:outline-none cursor-pointer" %>
       </div>
     <% end %>
 
