--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,7 +1,7 @@
 <header>
-  <nav class="flex items-center justify-between flex-wrap bg-yellow-50 p-6">
-    <div class="flex items-center flex-shrink-0 text-yellow-950 mr-6">
-      <span class="font-semibold text-2xl tracking-tight">TEST APP</span>
+  <nav class="flex items-center justify-between flex-wrap bg-yellow-50 p-3">
+    <div class="flex items-center justify-center">
+      <%= image_tag 'SweetsLogロゴ（横並び）', width: 250 %>
     </div>
     <ul class="flex mr-4">
       <%= link_to 'ログイン', new_user_session_path, class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5" %>
