edit:ユーザー登録ページ

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,6 +23,7 @@
       <div class="actions flex justify-center">
         <%= f.submit (t "device.registrations.new.sign_in"), class: "mt-4 w-44 rounded-md bg-yellow-900 p-3 text-white focus:outline-none cursor-pointer" %>
       </div>
+    <% end %>
 
     <%= render "devise/shared/links" %>
   </div>
