--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,9 @@
 <header>
   <nav class="flex items-center justify-between flex-wrap bg-yellow-50 p-3">
     <div class="flex items-center justify-center">
-      <%= image_tag 'SweetsLogロゴ（横並び）', width: 250 %>
+      <%= link_to root_path do %>
+        <%= image_tag 'SweetsLogロゴ（横並び）', width: 250 %>
+      <% end %>
     </div>
     <ul class="flex mr-4">
       <%= link_to 'HOME', '#', class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5" %>
