--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,5 +1,4 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<%= render 'shared/flash_messages' %>
 <div class="flex items-center justify-center p-6">
   <%= image_tag 'SweetsLogロゴのみ', width: 500 %>
 </div>
