--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,14 +1,15 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation" data-turbo-cache="false">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
+  <div id="error_explanation" data-turbo-cache="false" class="mb-2 px-4 py-2 rounded-md text-white bg-rose-600">
     <ul>
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <% if message.include?("ユーザーネーム") %>
+          <li>・ <%= message %></li>
+        <% end %>
+      <% end %>
+      <% resource.errors.full_messages.each do |message| %>
+        <% unless message.include?("ユーザーネーム") %>
+          <li>・ <%= message %></li>
+        <% end %>
       <% end %>
     </ul>
   </div>
