--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -11,5 +11,7 @@
       <%= link_to 'ユーザー登録', new_user_registration_path, class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5" %>
     </ul>
   </nav>
-  <div class="flex-1 border-b border-gray-500"></div>
+  <div class="flex items-center justify-center">
+    <div class="border-b border-yellow-950 w-370"></div>
+  </div>
 </header>
