--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,5 @@
 <% if @posts.present? %>
-<div class="m-4 flex flex-wrap gap-4 justify-center items-center">
-  <% @posts.each do |post| %>
-    <div class="w-96 h-96 bg-white border border-gray-200 shadow-2xs rounded-xl p-4 md:p-5 dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
-      <h3 class="text-lg text-center font-bold text-gray-800 dark:text-white">
-        <%= link_to post.title, post_path(post) %>
-      </h3>
-      <p class="mt-1 text-xs text-right font-medium uppercase text-gray-500 dark:text-neutral-500">
-        <i class="bi bi-person"></i><%= post.user.name %>
-      </p>
-    </div>
-  <% end %>
-</div>
+  <%= render @posts %>
 <% else %>
-  <div class="mb-3 text-center">掲示板がありません</div>
+  <div class="mt-10 text-center">掲示板がありません</div>
 <% end %>
