--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/flash_messages' %>
 <div class='flex justify-center mb-6'>
   <div class=" col-md-10 col-lg-8">
     <div class= "mt-15 mb-10 font-bold text-center text-3xl text-yellow-900">
