--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/flash_messages' %>
 <div class='flex flex-wrap justify-center mb-6'>
   <div class=" col-md-10 col-lg-8">
     <div class= "m-4 text-center text-3xl text-yellow-950">
