--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
           <%= link_to "編集する", edit_post_path(@post), class: "focus:outline-none cursor-pointer" %>
         </div>
         <div class= "mt-4 text-yellow-950">
-          <%= link_to "削除する", '#', class: "focus:outline-none cursor-pointer", data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" } %>
+          <%= link_to "削除する", post_path(@post), class: "focus:outline-none cursor-pointer", data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" } %>
         </div>
       </div>
     <% end %>
