--- a/app/views/shared/_object_error_messages.html.erb
+++ b/app/views/shared/_object_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <div id="error_explanation" class="mb-4 px-4 py-2 rounded-md text-rose-950 bg-rose-200 border-2 border-rose-900">
+  <div id="error_explanation" class="m-4 px-4 py-2 rounded-md text-rose-950 bg-rose-200 border-2 border-rose-900">
     <ul class="mb-0">
       <% object.errors.each do |error| %>
         <li><%= error.full_message %></li>
