--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,6 +7,11 @@
       <p class="mt-1 text-xs text-right font-medium uppercase text-gray-500 dark:text-neutral-500">
         <i class="bi bi-person"></i><%= post.user.name %>
       </p>
+      <% if post.images.attached? %>
+        <div class="flex flex-wrap justify-center items-center">
+          <%= image_tag(post.images.first, width: 300, height: 300, style: "object-fit: cover;") %>
+        </div>
+      <% end %>
     </div>
   <% end %>
 </div>
