add:ポスト詳細での画像表示

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,14 @@
 <%= render 'shared/flash_messages' %>
-<div class='flex flex-wrap justify-center mb-6'>
+<div class='mt-10 flex flex-wrap justify-center mb-6'>
   <div class=" col-md-10 col-lg-8">
-    <div class= "m-4 text-center text-3xl text-yellow-950">
+    <div class= "m-10 text-center text-3xl text-yellow-950">
       <%= @post.title %>
     </div>
+        <% if @post.images.attached? %>
+      <div class="flex flex-wrap justify-center items-center">
+        <%= image_tag(@post.images.first, width: 300, height: 300, style: "object-fit: cover;") %>
+      </div>
+    <% end %>
     <div class= "mt-10 text-yellow-950">
       <%= @post.body %>
     </div>
