--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,7 +2,7 @@
 <div class='flex justify-center mb-6'>
   <div class=" col-md-10 col-lg-8">
     <div class= "mt-15 mb-10 font-bold text-center text-3xl text-yellow-900">
-      ポスト編集
+      ポスト編集ページ
     </div>
     <div class= "flex-col">
     <%= form_with model: @post do |f| %>
