add:ホームでのslider表示のみ

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -2,7 +2,13 @@
 <div class="flex items-center justify-center p-6">
   <%= image_tag 'SweetsLogロゴのみ', width: 500 %>
 </div>
-<div class= "m-6 text-center text-xl text-yellow-900 font-semibold">
+<div class="slider">
+  <div><%= image_tag 'image1.png' %></div>
+  <div><%= image_tag 'image2.png' %></div>
+  <div><%= image_tag 'image3.png' %></div>
+  <div><%= image_tag 'image4.png' %></div>
+</div>
+<div class= "m-10 text-center text-xl text-yellow-900 font-semibold">
   <ul>
     <li>「このスイーツ美味しかったなぁ」</li>
     <li>このような "幸せな記憶" を記録、</li>
