--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
 
+    <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css", media: "all", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css", media: "all", "data-turbo-track": "reload" %>
+
+    <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
