--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -19,6 +19,16 @@
         <%= f.label :images %>
         <%= f.file_field :images, multiple: true, class: "shadow appearance-none border-2 border-blue rounded w-full md:py-2 py-1 md:px-3 px-2 text-black leading-tight focus:outline-none focus:shadow-outline cursor-pointer" %>
       </div>
+        <% if @post.images.attached? %>
+    <div class="mb-3">
+      <p>現在の画像:</p>
+      <% @post.images.each do |image| %>
+        <div class="text-center">
+          <%= image_tag image.variant(resize_to_limit: [200, 200]), class: "img-thumbnail" %><br>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
       <div class="actions flex justify-center">
         <%= f.submit nil, class: "mt-4 w-44 rounded-md bg-yellow-900 p-3 text-white focus:outline-none cursor-pointer" %>
       </div>
