--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,15 @@
 <%= render 'shared/flash_messages' %>
-<div class="m-20 grid grid-flow-col grid-rows-3 gap-4 justify-center">
-  <div class="row-span-3">
+<div class="container mx-auto px-6 md:px-10 py-8 my-8 md:bg-white rounded-xl min-h-screen max-w-screen-lg">
+<div class="flex justify-between items-center mb-4">
+  <div class="col-span-2">
     <% if @post.images.attached? %>
-      <div class="flex flex-wrap justify-center items-center">
-        <%= image_tag(@post.images.first, width: 300, height: 300, style: "object-fit: cover;") %>
+      <div class="flex flex-wrap justify-items-start items-center">
+        <%= image_tag(@post.images.first.variant(resize_to_fit:[300, nil],resize_to_fill: [300, 300])) %>
       </div>
     <% end %>
   </div>
-  <div class= "ml-10 col-span-2">
-    <div class= "m-10 text-3xl text-yellow-950">
+  <div class= "mr-15 col-span-2">
+    <div class= "text-3xl items-start text-yellow-950">
       <%= @post.title %>
     </div>
     <div class= "col-span-2 row-span-2 text-yellow-950 whitespace-pre-wrap">
@@ -26,3 +27,4 @@
     </div>
   </div>
 <% end %>
+ </div>
