--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,18 @@
 <%= render 'shared/flash_messages' %>
 <div class="container mx-auto px-6 md:px-10 py-8 my-8 md:bg-white rounded-xl min-h-screen max-w-screen-lg">
-<div class="flex justify-between items-center mb-4">
-  <div class="col-span-2">
-    <% if @post.images.attached? %>
-      <div class="flex flex-wrap justify-items-start items-center">
-        <%= image_tag(@post.images.first.variant(resize_to_fit:[300, nil],resize_to_fill: [300, 300])) %>
-      </div>
-    <% end %>
-  </div>
-  <div class= "mr-15 col-span-2">
-    <div class= "text-3xl items-start text-yellow-950">
+  <div class="flex flex-col items-center overflow-hidden md:flex-row">
+    <a class="group relative block shrink-0 self-start overflow-hidden">
+      <% if @post.images.attached? %>
+        <div class="flex flex-wrap justify-items-start items-center">
+          <%= image_tag(@post.images.first.variant(resize_to_fill: [350, 350]),class:"rounded-xl") %>
+        </div>
+      <% end %>
+    </a>
+  <div class="flex flex-col gap-2 lg:p-10">
+    <span class="text-sm text-gray-400"><%= l @post.created_at %></span>
+    <h2 class="text-xl font-bold text-gray-800">
       <%= @post.title %>
-    </div>
+    </h2>
     <div class= "col-span-2 row-span-2 text-yellow-950 whitespace-pre-wrap">
       <%= @post.body %>
     </div>
@@ -27,4 +28,4 @@
     </div>
   </div>
 <% end %>
- </div>
+</div>
