--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,13 +1,17 @@
-    <div class="w-96 h-96 bg-white border border-gray-200 shadow-2xs rounded-xl p-4 md:p-5 dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
-      <h3 class="text-lg text-center font-bold text-gray-800 dark:text-white">
-        <%= link_to post.title, post_path(post) %>
-      </h3>
-      <p class="mt-1 text-xs text-right font-medium uppercase text-gray-500 dark:text-neutral-500">
-        <i class="bi bi-person"></i><%= post.user.name %>
-      </p>
+<div class="w-96 h-96 bg-white border border-gray-200 shadow-2xs rounded-xl p-4 md:p-5 dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
+  <a class="group relative block shrink-0 self-start overflow-hidden">
+    <div class="m-2 flex flex-wrap justify-center items-center transition duration-200 group-hover:scale-110">
       <% if post.images.attached? %>
-        <div class="m-2 flex flex-wrap justify-center items-center">
-          <%= image_tag(post.images.first.variant(resize_to_fit:[280, nil],resize_to_fill: [280, 280])) %>
-        </div>
-      <% end %>
+        <%= image_tag(post.images.first.variant(resize_to_fill: [280, 280]), class:"rounded-xl") %>
+      <% else %>
+        <%= image_tag 'no_image.png', class:"rounded-xl" %>
+       <% end %>
     </div>
+  </a>
+  <h3 class="text-lg text-center font-bold text-gray-800 dark:text-white">
+    <%= link_to post.title, post_path(post) %>
+  </h3>
+  <p class="mt-1 text-xs text-left font-medium text-gray-500 dark:text-neutral-500">
+    <i>投稿者：<%= post.user.name %></i>
+  </p>
+</div>
