--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -3,10 +3,11 @@
   <%= image_tag 'SweetsLogロゴのみ', width: 500 %>
 </div>
 <div class="slider">
-  <div><%= image_tag 'image1.png' %></div>
-  <div><%= image_tag 'image2.png' %></div>
-  <div><%= image_tag 'image3.png' %></div>
-  <div><%= image_tag 'image4.png' %></div>
+  <% @posts.each do |post| %>
+    <% if post.images.attached? %>
+      <div><%= image_tag(post.images.first.variant(resize_to_fill: [400, 400]), class:"rounded-xl") %></div>
+    <% end %>
+  <% end %>
 </div>
 <div class= "m-10 text-center text-xl text-yellow-900 font-semibold">
   <ul>
