--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -11,7 +11,13 @@
   <h3 class="text-lg text-center font-bold text-gray-800 dark:text-white">
     <%= link_to post.title, post_path(post) %>
   </h3>
+  <div class="flex">
   <p class="mt-1 text-xs text-left font-medium text-gray-500 dark:text-neutral-500">
     <i>投稿者：<%= post.user.name %></i>
   </p>
+  <p class="mt-1 text-xs text-right">
+  <% if current_user.notown?(post) %>
+    <%= render 'like_buttons', { post: post } %>
+  <% end %>
+  </div>
 </div>
