--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,7 @@
 <%= render 'shared/flash_messages' %>
+<div class= "mt-15 font-bold text-center text-3xl text-yellow-900">
+  投稿一覧ページ
+</div>
 <% if @posts.present? %>
   <div class="pt-10 flex justify-center items-center min-h-screen">
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
