--- a/app/views/posts/likes.html.erb
+++ b/app/views/posts/likes.html.erb
@@ -9,6 +9,6 @@
     </div>
   </div>
 <% else %>
-  <div class="mb-3 text-center">掲示板がありません</div>
+  <div class="mt-10 text-center">掲示板がありません</div>
 <% end %>
 </div>
