--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,10 +1,12 @@
 <div class="w-96 h-96 bg-white border border-gray-200 shadow-2xs rounded-xl p-4 md:p-5 dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
   <a class="group relative block shrink-0 self-start overflow-hidden">
-    <div class="m-2 flex flex-wrap justify-center transition duration-200 group-hover:scale-110">
-      <% if post.images.attached? %>
-        <%= image_tag(post.images.first.variant(resize_to_fill: [280, 280]), class:"rounded-xl") %>
-      <% else %>
-        <%= image_tag 'no_image.png', class:"rounded-xl" %>
+    <div class="m-2 flex flex-wrap justify-center">
+      <%= link_to post_path(post), class: "group" do %>
+        <% if post.images.attached? %>
+          <%= image_tag(post.images.first.variant(resize_to_fill: [280, 280]), class:"rounded-xl transition duration-200 group-hover:scale-110") %>
+        <% else %>
+          <%= image_tag 'no_image.png', class:"transition duration-200 group-hover:scale-110" %>
+        <% end %>
       <% end %>
     </div>
   </a>
