--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,7 @@
 <div class= "mt-15 font-bold text-center text-3xl text-yellow-900">
   投稿一覧ページ
 </div>
+<%= render 'search_form', q: @q, url: posts_path %>
 <% if @posts.present? %>
   <div class="pt-15 flex justify-center items-center min-h-screen">
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
