--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,9 +3,9 @@
     <div class="m-2 flex flex-wrap justify-center">
       <%= link_to post_path(post), class: "group" do %>
         <% if post.images.attached? %>
-          <%= image_tag(post.images.first.variant(resize_to_fill: [200, 200]), class:"rounded-xl transition duration-200 group-hover:scale-110") %>
+          <%= image_tag(post.images.first.variant(resize_to_fill: [200, 200]), class:"rounded-xl transition duration-200 group-hover:scale-105") %>
         <% else %>
-          <%= image_tag 'no_image.png', class:"transition duration-200 group-hover:scale-110" %>
+          <%= image_tag 'no_image.png', class:"rounded-xl transition duration-300 group-hover:scale-105" %>
         <% end %>
       <% end %>
     </div>
