edit:ページネーションのCSS

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-7 justify-items-center">
         <%= render @posts %>
       </div>
-      <nav class="my-custom-pagination">
+      <nav class="mt-5">
         <%= pagy_nav(@pagy).html_safe %>
       </nav>
     </div>
