--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,11 @@
 <div class= "m-4 text-center text-3xl text-yellow-950">
   <%= @user.name %>のMY PAGE
 </div>
+<div class="mt-15 max-w-screen-xl mx-auto">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-7 justify-items-center">
+    <%= link_to "自分の投稿", my_posts_user_path(current_user.id), class: "w-75 h-75 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5" %>
+    <%= link_to "お気に入りした投稿（調整中）", "#", class: "w-75 h-75 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5" %>
+    <%= link_to "プロフィール（調整中）", "#", class: "w-75 h-75 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5" %>
+    <%= link_to "個人情報変更（調整中）", "#", class: "w-75 h-75 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5" %>
+  </div>
+</div>
