--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,50 @@
   <%= @user.name %>のMY PAGE
 </div>
 <div class="mt-15 max-w-screen-xl mx-auto">
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-7 justify-items-center">
-    <%= link_to "自分の投稿", my_posts_user_path(current_user.id), class: "w-75 h-75 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5" %>
-    <%= link_to "お気に入りした投稿（調整中）", "#", class: "w-75 h-75 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5" %>
-    <%= link_to "プロフィール（調整中）", "#", class: "w-75 h-75 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5" %>
-    <%= link_to "個人情報変更（調整中）", "#", class: "w-75 h-75 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5" %>
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 justify-items-center">
+
+    <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+      <%= link_to my_posts_user_path(current_user.id) do %>
+        <div class= "p-6 flex flex-wrap justify-center">
+          <%= image_tag "自分の投稿マーク.png" %>
+          <div class="pt-4 text-lg text-center font-bold text-yellow-900">
+            <span>自分の投稿</span>
+          </div>
+        </div>
+      <% end %>
+    </div>
+
+    <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+      <%= link_to likes_posts_path do %>
+        <div class= "p-6 flex flex-wrap justify-center">
+          <%= image_tag "お気に入り投稿マーク.png" %>
+          <div class="pt-4 text-lg text-center font-bold text-yellow-900">
+            <span>お気に入りした投稿</span>
+          </div>
+        </div>
+      <% end %>
+    </div>
+
+    <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+      <%= link_to "#" do %>
+        <div class= "p-6 flex flex-wrap justify-center">
+          <%= image_tag "プロフィールマーク.png" %>
+          <div class="pt-4 text-lg text-center font-bold text-yellow-900">
+            <span>プロフィール</span>
+          </div>
+        </div>
+      <% end %>
+    </div>
+
+    <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+      <%= link_to "#" do %>
+        <div class= "p-6 flex flex-wrap justify-center">
+          <%= image_tag "設定マーク.png" %>
+          <div class="pt-4 text-lg text-center font-bold text-yellow-900">
+            <span>個人情報変更</span>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
