--- a/app/views/posts/_like.html.erb
+++ b/app/views/posts/_like.html.erb
@@ -1,3 +1,3 @@
 <%= link_to likes_path(post_id: post.id), id: "like-button-for-post-#{post.id}", data: { turbo_method: :post } do %>
-  <span style="font-size: 20px;">❤︎</span>
+  <span style="color:#663300; font-size: 20px;">❤︎</span>
 <% end %>
