edit:複数投稿から単数投稿可能へ

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,8 +2,8 @@
   <a class="group relative block shrink-0 self-start overflow-hidden">
     <div class="m-2 flex flex-wrap justify-center">
       <%= link_to post_path(post), class: "group" do %>
-        <% if post.images.attached? %>
-          <%= image_tag(post.images.first.variant(resize_to_fill: [200, 200]), class:"rounded-xl transition duration-200 group-hover:scale-105") %>
+        <% if post.image.attached? %>
+          <%= image_tag(post.image.variant(resize_to_fill: [200, 200]), class:"rounded-xl transition duration-200 group-hover:scale-105") %>
         <% else %>
           <%= image_tag 'no_image.png', class:"rounded-xl transition duration-300 group-hover:scale-105" %>
         <% end %>
