--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,9 +2,9 @@
 <div class="container mx-auto px-6 md:px-10 py-8 my-8 md:bg-white rounded-xl min-h-screen max-w-screen-lg">
   <div class="flex flex-col items-center overflow-hidden md:flex-row">
     <a class="group relative block shrink-0 self-start overflow-hidden">
-      <% if @post.images.attached? %>
+      <% if @post.image.attached? %>
         <div class="flex flex-wrap justify-items-start items-center">
-          <%= image_tag(@post.images.first.variant(resize_to_fill: [350, 350]), class:"rounded-xl") %>
+          <%= image_tag(@post.image.variant(resize_to_fill: [350, 350]), class:"rounded-xl") %>
         </div>
       <% end %>
     </a>
