--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -13,8 +13,10 @@
           <p class= "text-yellow-950">現在の画像:</p>
           <%= image_tag (@post.image.variant(resize_to_fill: [350, 350])) %>
         <% end %>
-        <%= f.label :image, class: "text-yellow-950" %>
-        <%= f.file_field :image, class: "shadow appearance-none border-2 border-yellow-950 rounded w-full py-1 px-2 text-yellow-950 leading-tight focus:outline-none focus:shadow-outline cursor-pointer" %>
+        <div class="mt-5">
+          <%= f.label :image, class: "text-yellow-950" %>
+          <%= f.file_field :image, class: "shadow appearance-none border-2 border-yellow-950 rounded w-full py-1 px-2 text-yellow-950 leading-tight focus:outline-none focus:shadow-outline cursor-pointer" %>
+        </div>
       </div>
       <div class="ml-8 mr-8 col-span-1 justify-self-start">
         <div class= "mb-6 flex flex-col">
