--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -10,8 +10,10 @@
       <div>
         <p class= "text-yellow-950 text-center">↓　ここに画像が入ります　↓</p>
         <%= image_tag "no_image.png", width: 350, height: 350, class:"rounded-xl transition duration-300 group-hover:scale-105" %>
-        <%= f.label :image, class: "text-yellow-950" %>
-        <%= f.file_field :image, class: "shadow appearance-none border-2 border-yellow-950 rounded w-full py-1 px-2 text-yellow-950 leading-tight focus:outline-none focus:shadow-outline cursor-pointer" %>
+        <div class="mt-5">
+          <%= f.label :image, class: "text-yellow-950" %>
+          <%= f.file_field :image, class: "shadow appearance-none border-2 border-yellow-950 rounded w-full py-1 px-2 text-yellow-950 leading-tight focus:outline-none focus:shadow-outline cursor-pointer" %>
+        </div>
       </div>
       <div class="ml-8 mr-8 col-span-1 justify-self-start">
         <div class="mb-3 flex flex-col">
