--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,13 @@
       <div class= "mt-10 text-yellow-950">
         <%= @post.body %>
       </div>
+      <div class="mt-6 flex-col">
+        <% @post.tags.each do |tag| %>
+          <div class="text-yellow-900">
+            #<%= link_to tag.name, posts_path(tag_name: tag.name) %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
   <% if @post.user == current_user %>
