--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -1,7 +1,7 @@
 <div class="m-4 flex flex-wrap gap-4 justify-center items-center">
 <%= search_form_for q, url: url do |f| %>
   <%= f.search_field :title_cont, placeholder: "料理名", class: "w-50 bg-stone-50 p-1 border border-stone-950 rounded-md" %>
-  <%= f.search_field :body_cont, placeholder: "キーワード", class: "w-96 bg-stone-50 p-1 border border-stone-950 rounded-md" %>
+  <%= f.search_field :body_or_tags_name_cont, placeholder: "キーワード", class: "w-96 bg-stone-50 p-1 border border-stone-950 rounded-md" %>
   <%= f.submit "検索", class: "mt-4 rounded-md bg-yellow-900 p-1 text-white focus:outline-none cursor-pointer" %>
 <% end %>
 </div>
