--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,8 +4,8 @@
   </div>
   <%= render 'search_form', q: @q, url: posts_path %>
   <% if @posts.present? %>
-    <div class="mt-15 max-w-screen-xl mx-auto">
-      <div class="grid grid-cols-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-7 justify-items-center">
+    <div class="mt-15 max-w-300 mx-auto">
+      <div class="grid grid-cols-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 justify-items-center">
         <%= render @posts %>
       </div>
       <nav class="mt-10">
