edit:タイトル文字

--- a/app/views/users/my_posts.html.erb
+++ b/app/views/users/my_posts.html.erb
@@ -1,4 +1,4 @@
-<div class= "mt-10 mb-4 text-center text-xl text-yellow-950">
+<div class= "mt-15 mb-10 font-bold text-center text-3xl text-yellow-900">
   <%= @user.name %>の投稿
 </div>
 <%= render "posts/search_form", q: @q, url: my_posts_user_path %>
