--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,9 @@
   <div class= "mt-15 font-bold text-center text-3xl text-yellow-900">
     投稿一覧ページ
   </div>
-  <%= render 'search_form', q: @q, url: posts_path %>
+  <div class="m-4 flex flex-wrap gap-4 justify-center items-center">
+    <%= render 'search_form', q: @q, url: posts_path %>
+  </div>
   <% if @posts.present? %>
     <div class="mt-15 max-w-300 mx-auto">
       <div class="grid grid-cols-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 justify-items-center">
