--- a/app/views/users/my_posts.html.erb
+++ b/app/views/users/my_posts.html.erb
@@ -9,7 +9,7 @@
     カレンダーを表示
   </button>
 </div>
-<%= render "calendar", calendar_posts: @calendar_posts %>
+<%= render "calendar" %>
 
 <% if @posts.present? %>
   <div class="mt-15 max-w-screen-xl mx-auto">
