各ロゴ・マーク画像変更

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,8 @@
     <div>
       <% if @post.image.attached? %>
         <%= image_tag(@post.image.variant(resize_to_fill: [350, 350]), class:"rounded-xl mb-10") %>
+      <% else %>
+        <%= image_tag 'No_Image.png', class:"rounded-xl transition duration-300 group-hover:scale-105", width: 350 %>
       <% end %>
     </div>
     <div class="pr-15 col-span-1 justify-self-start">
