--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="flex items-center justify-between flex-wrap bg-yellow-50 p-3">
     <div class="flex items-center justify-center">
       <%= link_to root_path do %>
-        <%= image_tag 'SweetsLogロゴ（横並び）', width: 250 %>
+        <%= image_tag "SweetsLogロゴ（ヘッダー）", width: 250 %>
       <% end %>
     </div>
     <ul class="flex mr-4">
