--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/flash_messages' %>
-<div class="flex items-center justify-center p-6">
-  <%= image_tag 'SweetsLogロゴのみ', width: 500 %>
+<div class="flex items-center justify-center m-45">
+  <%= image_tag "SweetsLogロゴ（ホーム）" %>
 </div>
 <div class="slider">
   <% @posts.each do |post| %>
