--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,7 +5,7 @@
         <% if post.image.attached? %>
           <%= image_tag(post.image.variant(resize_to_fill: [200, 200]), class:"rounded-xl transition duration-200 group-hover:scale-105") %>
         <% else %>
-          <%= image_tag 'no_image.png', class:"rounded-xl transition duration-300 group-hover:scale-105" %>
+          <%= image_tag "No_Image.png", class:"rounded-xl transition duration-300 group-hover:scale-105" %>
         <% end %>
       <% end %>
     </div>
