--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,7 +9,7 @@
       <div class="grid grid-cols-2 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
       <div>
         <p class= "text-yellow-950 text-center">↓　ここに画像が入ります　↓</p>
-        <%= image_tag "no_image.png", width: 350, height: 350, class:"rounded-xl transition duration-300 group-hover:scale-105" %>
+          <%= image_tag "空.png", width: 350, height: 350, class:"rounded-xl transition duration-300 group-hover:scale-105" %>
         <div class="mt-6">
           <%= f.label :image, class: "text-yellow-950" %>
           <%= f.file_field :image, class: "shadow appearance-none border-2 border-yellow-950 rounded w-full py-1 px-2 text-yellow-950 leading-tight focus:outline-none focus:shadow-outline cursor-pointer" %>
