--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,13 @@
-<div class= "m-4 text-center text-3xl text-yellow-950">
+<div class= "mt-15 mb-10 font-bold text-center text-3xl text-yellow-900">
   <%= @user.name %>のMY PAGE
 </div>
-<div class="mt-15 max-w-screen-xl mx-auto">
+<div class="mt-15 max-w-290 mx-auto">
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 justify-items-center">
 
     <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
       <%= link_to my_posts_user_path(current_user.id) do %>
         <div class= "p-6 flex flex-wrap justify-center">
-          <%= image_tag "自分の投稿マーク.png" %>
+          <%= image_tag "自身の投稿ページ.png" %>
           <div class="pt-4 text-lg text-center font-bold text-yellow-900">
             <span>自分の投稿</span>
           </div>
@@ -18,7 +18,7 @@
     <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
       <%= link_to likes_posts_path do %>
         <div class= "p-6 flex flex-wrap justify-center">
-          <%= image_tag "お気に入り投稿マーク.png" %>
+          <%= image_tag "お気に入りページ.png" %>
           <div class="pt-4 text-lg text-center font-bold text-yellow-900">
             <span>お気に入りした投稿</span>
           </div>
