--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<header>
+<header class="font-mono text-xs">
   <nav class="flex items-center justify-between flex-wrap bg-yellow-50 p-3">
     <div class="flex items-center justify-center">
       <%= link_to root_path do %>
@@ -6,14 +6,14 @@
       <% end %>
     </div>
     <ul class="flex mr-4">
-      <%= link_to '投稿する', new_post_path, class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5 hover:bg-yellow-700" %>
-      <%= link_to '投稿一覧', posts_path, class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5 hover:bg-yellow-700" %>
-      <%= link_to 'お気に入り', likes_posts_path, class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5 hover:bg-yellow-700" %>
-      <%= link_to 'マイページ', user_path(current_user.id), class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5 hover:bg-yellow-700" %>
-      <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5 hover:bg-yellow-700" %>
+      <%= link_to '投稿する', new_post_path, class: "mr-4 px-5 py-2.5 text-yellow-50 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+      <%= link_to '投稿一覧', posts_path, class: "mr-4 px-5 py-2.5 text-yellow-50 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+      <%= link_to 'お気に入り', likes_posts_path, class: "mr-4 px-5 py-2.5 text-yellow-50 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+      <%= link_to 'マイページ', user_path(current_user.id), class: "mr-4 px-5 py-2.5 text-yellow-50 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+      <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class: "mr-4 px-5 py-2.5 text-yellow-50 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
     </ul>
   </nav>
   <div class="flex items-center justify-center">
-    <div class="border-b border-yellow-950 w-370"></div>
+    <div class="mx-4 border-b border-yellow-950 w-full"></div>
   </div>
 </header>
