--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,4 +1,4 @@
-<header>
+<header class="font-mono text-xs">
   <nav class="flex items-center justify-between flex-wrap bg-yellow-50 p-3">
     <div class="flex items-center justify-center">
       <%= link_to root_path do %>
