--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -10,7 +10,7 @@
     <% end %>
     <%= f.search_field :title_cont, placeholder: " 料理名", class: "mr-1 w-50 bg-stone-50 p-1 border border-stone-950 rounded-md" %>
     <%= f.search_field :tags_name_cont, placeholder: " タグ", class: "mr-1 w-50 bg-stone-50 p-1 border border-stone-950 rounded-md" %>
-    <%= f.search_field :tags_name_cont, placeholder: " キーワード", class: "mr-1 w-96 bg-stone-50 p-1 border border-stone-950 rounded-md" %>
+    <%= f.search_field :body_or_tags_name_cont, placeholder: " キーワード", class: "mr-1 w-96 bg-stone-50 p-1 border border-stone-950 rounded-md" %>
     <%= f.submit "検索", class: "mt-4 rounded-md bg-yellow-900 p-1 text-white focus:outline-none cursor-pointer" %>
   <% end %>
 </div>
