--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,6 +1,6 @@
 <header class="font-mono text-xs">
   <nav class="flex items-center justify-between flex-wrap bg-yellow-50 p-3">
-    <div class="flex items-center justify-center">
+    <div class="flex items-center justify-center ml-6">
       <%= link_to root_path do %>
         <%= image_tag 'SweetsLogロゴ（ヘッダー）', width: 250 %>
       <% end %>
