--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,10 +2,9 @@
   ポスト作成
 </div>
 
-<%= render 'shared/flash_messages' %>
-
 <div class="container mx-auto px-6 py-15 my-15 bg-white rounded-xl min-h-screen max-w-screen-lg">
   <%= form_with model: @post, class: "new_post" do |f| %>
+    <%= render "shared/flash_messages" %>
       <div class="grid grid-cols-2 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
       <div>
         <p class= "text-yellow-950 text-center">↓　ここに画像が入ります　↓</p>
