--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -32,6 +32,8 @@
           <%= f.label :address %>
           <%= f.text_field :address, id: "Address", class: 'w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md' %>
         </div>
+          <%= f.hidden_field :latitude, id: "latitude" %>
+          <%= f.hidden_field :longitude, id: "longitude" %>
       </div>
     </div>
     <div class="actions flex justify-center">
