--- a/app/views/diagnoses/_form.html.erb
+++ b/app/views/diagnoses/_form.html.erb
@@ -1,38 +1,38 @@
 <%= form_with url: diagnoses_result_path, method: :post, local: true, data: { turbo_frame: "diagnosis_result" } do |form| %>
   <div class="py-2">
-    <p class="mb-1 font-semibold">
+    <p class="mb-1 text-sm font-semibold">
       Q1. 今日の気分は？
     </p>
     <label class="inline-flex items-center space-x-2">
-      <%= form.radio_button :q1, 'A', class: "form-radio text-pink-500" %>
+      <%= form.radio_button :q1, 'A', class: "form-radio" %>
         <span>ゆったりリラックスしたい</span>
     </label><br>
     <label class="inline-flex items-center space-x-2">
-      <%= form.radio_button :q1, 'B', class: "form-radio text-pink-500" %>
+      <%= form.radio_button :q1, 'B', class: "form-radio" %>
       <span>ちょっと元気を出したい</span>
     </label><br>
     <label class="inline-flex items-center space-x-2">
-      <%= form.radio_button :q1, 'C', class: "form-radio text-pink-500" %>
+      <%= form.radio_button :q1, 'C', class: "form-radio" %>
       <span>なんとなくワクワクしてる</span>
     </label>
   </div>
 
   <div class="py-2">
-    <p class="mb-1 font-semibold">
+    <p class="mb-1 text-sm font-semibold">
       Q2. どっちが食べたい？
     </p>
     <label class="inline-flex items-center space-x-2">
-      <%= form.radio_button :q2, 'A', class: "form-radio text-pink-500" %>
+      <%= form.radio_button :q2, 'A', class: "form-radio" %>
       <span>洋菓子</span>
     </label><br>
     <label class="inline-flex items-center space-x-2">
-      <%= form.radio_button :q2, 'B', class: "form-radio text-pink-500" %>
+      <%= form.radio_button :q2, 'B', class: "form-radio" %>
       <span>和菓子</span>
     </label>
   </div>
 
   <div class="py-2">
-    <p class="mb-1 font-semibold">
+    <p class="mb-1 text-sm font-semibold">
       Q3. 今の状態はどれ？
     </p>
     <label class="inline-flex items-center space-x-2">
@@ -49,5 +49,5 @@
     </label>
   </div>
 
-  <%= form.submit "診断する", class: "mt-4 w-44 rounded-md bg-yellow-900 p-3 text-white focus:outline-none cursor-pointer" %>
+  <%= form.submit "診断する", class: "mt-4 w-44 text-sm rounded-md bg-yellow-900 p-3 text-white focus:outline-none cursor-pointer" %>
 <% end %>
