--- a/app/views/diagnoses/new.html.erb
+++ b/app/views/diagnoses/new.html.erb
@@ -1,8 +1,8 @@
-<div class= "mt-15 mb-10 font-bold text-center text-3xl text-yellow-900">
+<div class= "mt-10 font-bold text-center text-2xl text-yellow-900">
   今食べたいスイーツ診断
 </div>
 
-<div class="container mx-auto px-6 py-15 my-15 bg-white rounded-xl min-h-screen-sm max-w-screen-sm">
+<div class="mt-6 container mx-auto px-6 py-10 bg-white rounded-xl min-h-screen-sm max-w-screen-sm">
   <div class="justify-items-center">
     <%= turbo_frame_tag "diagnoses_result" do %>
       <%= render "form" %>
