--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div class= "bg-yellow-50 min-h-[100vh] pb-10">
+    <div class= "bg-yellow-50 min-h-[100vh] pb-10 font-mono text-xs">
       <% if user_signed_in? %>
         <%= render 'shared/header' %>
       <% else %>
