--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,51 +3,55 @@
   <%= form_with model: @post do |f| %>
     <div class="grid grid-cols-2 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
       <div>
+        <p class= "text-yellow-950">　</p>
         <% if @post.image.attached? %>
-          <p class= "text-yellow-950">　</p>
           <%= image_tag (@post.image.variant(resize_to_fill: [350, 350])) %>
+        <% else %>
+          <div class="container h-90 w-90 flex items-center justify-center rounded-xl bg-gray-300">
+            <p>ここに画像が入ります</p>
+          </div>
         <% end %>
-        <div class="mt-6">
-          <%= f.label :image, class: "text-yellow-950" %>
-          <%= f.file_field :image, class: "shadow appearance-none border-2 border-yellow-950 rounded w-full py-1 px-2 text-yellow-950 leading-tight focus:outline-none focus:shadow-outline cursor-pointer" %>
+        <div class="mt-12.5">
+          <%= f.label :image, class: "text-yellow-950 font-bold" %>
+          <%= f.file_field :image, class: "appearance-none bg-stone-50 border border-yellow-950 rounded w-full py-1.5 px-2 text-yellow-950 cursor-pointer" %>
         </div>
       </div>
       <div class="ml-8 mr-8 col-span-1 justify-self-start">
-        <div class= "mb-3 flex flex-col">
-          <div class= "flex">
+        <div class= "mb-5 flex flex-col">
+          <div class= "flex font-bold">
             <%= f.label :title, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
-          <%= f.text_field :title, class: "w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md" %>
+          <%= f.text_field :title, class: "w-96 py-1.5 bg-stone-50 border border-yellow-950 rounded-md" %>
         </div>
 
-        <div class="mb-3 flex flex-col">
-          <div class= "flex">
+        <div class="mb-5 flex flex-col">
+          <div class= "flex font-bold">
             <%= f.label :body, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
           <%= f.text_area :body, class: "w-96 bg-stone-50 border border-yellow-950 rounded-md", rows: "12" %>
         </div>
 
-        <div class="mb-3 flex flex-col">
-          <%= f.label :tag_names, class: "text-yellow-950" %>
-          <%= f.text_field :tag_names, value: f.object.tag_names, class: "w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 複数登録する場合はカンマ( , )で区切ってください" %>
+        <div class="mb-5 flex flex-col">
+          <%= f.label :tag_names, class: "text-yellow-950 font-bold" %>
+          <%= f.text_field :tag_names, value: f.object.tag_names, class: "w-96 py-1.5 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 複数登録する場合はカンマ( , )で区切ってください" %>
         </div>
 
-        <div class="mb-3 flex flex-col">
-          <div class= "flex">
-            <%= f.label :spot %>
+        <div class="mb-5 flex flex-col">
+          <div class= "flex font-bold">
+            <%= f.label :spot, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
-          <%= f.text_field :spot, id: "spot", class: "w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 店名や市町村名を入力すると候補が出てきます" %>
+          <%= f.text_field :spot, id: "spot", class: "w-96 py-1.5 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 店名や市町村名を入力すると候補が出てきます" %>
         </div>
 
-        <div class="mb-3 flex flex-col">
-          <div class= "flex">
-            <%= f.label :address %>
+        <div class="mb-5 flex flex-col">
+          <div class= "flex font-bold">
+            <%= f.label :address, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
-          <%= f.text_field :address, id: "address", class: "w-96 py-1 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 候補を選択することで住所が自動で入力されます" %>
+          <%= f.text_field :address, id: "address", class: "w-96 py-1.5 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 候補を選択することで住所が自動で入力されます" %>
         </div>
 
         <%= f.hidden_field :latitude, id: "latitude" %>
@@ -57,7 +61,8 @@
     <div class="actions flex justify-center">
       <%= f.submit nil, class: "mt-4 w-44 rounded-md bg-yellow-900 p-3 text-white focus:outline-none cursor-pointer" %>
     </div>
-  <% end %>
+<% end %>
 </div>
+
 
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_API_KEY"] %>&libraries=places&callback=initAutocomplete" async defer></script>
