--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,21 +10,19 @@
       <% end %>
     </div>
   </a>
-  <h3 class="text-lg text-center font-black text-yellow-900">
-    <%= link_to post.title, post_path(post),class:"hover:text-yellow-600" %>
+  <h3 class="text-base text-center font-black text-yellow-900">
+    <%= link_to post.title, post_path(post), class:"hover:text-yellow-600" %>
   </h3>
     <div class="flex items-end justify-between mt-auto">
-    <div class="text-xs font-medium text-yellow-600">
+    <div class="text-yellow-600">
       <i><%= l post.created_at %></i>
     </div>
     <% if current_user.notown?(post) %>
-      <div>
         <%= render 'like_buttons', { post: post } %>
-      </div>
     <% else %>
-    <div>
-      <%= link_to "編集", edit_post_path(post), class: "text-xs focus:outline-none cursor-pointer yellow-950" %>
-      <%= link_to "削除", post_path(post), class: "text-xs focus:outline-none cursor-pointer yellow-950", data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }  %>
+    <div class="mt-3">
+      <%= link_to "編集", edit_post_path(post), class: "focus:outline-none cursor-pointer yellow-950" %>
+      <%= link_to "削除", post_path(post), class: "focus:outline-none cursor-pointer yellow-950", data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }  %>
     </div>
     <% end %>
   </div>
