--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,17 +1,18 @@
 <%= render 'shared/flash_messages' %>
-  <div class= "mt-15 font-bold text-center text-3xl text-yellow-900">
-    投稿一覧ページ
-  </div>
+
+<div class="mt-5">
   <%= render 'search_form', q: @q, url: posts_path %>
-  <% if @posts.present? %>
-    <div class="mt-15 max-w-300 mx-auto">
-      <div class="grid grid-cols-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 justify-items-center">
-        <%= render @posts %>
-      </div>
-      <nav class="mt-10">
-        <%= pagy_nav(@pagy).html_safe %>
-      </nav>
+</div>
+
+<% if @posts.present? %>
+  <div class="mt-7 max-w-300 mx-auto">
+    <div class="grid grid-cols-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 justify-items-center">
+      <%= render @posts %>
     </div>
-  <% else %>
-    <div class="mb-3 text-center">掲示板がありません</div>
-  <% end %>
+    <nav class="mt-10">
+      <%= pagy_nav(@pagy).html_safe %>
+    </nav>
+  </div>
+<% else %>
+  <div class="mb-3 text-center">掲示板がありません</div>
+<% end %>
