--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -9,7 +9,7 @@
     <% end %>
   <% end %>
 </div>
-<div class= "m-10 text-center text-xl text-yellow-900 font-semibold">
+<div class= "m-10 text-center text-base text-yellow-900 font-semibold">
   <ul>
     <li>「このスイーツ美味しかったなぁ」</li>
     <li>このような "幸せな記憶" を記録、</li>
@@ -40,5 +40,5 @@
   <div class="border-b border-yellow-950 w-370"></div>
 </div>
 <div class="mt-6">
-  <%= link_to '会員登録（無料） をして使ってみる', new_user_registration_path, class: "block w-full text-lg text-center mr-4 text-yellow-50 bg-yellow-900 px-5 py-2.5" %>
+  <%= link_to '会員登録（無料） をして使ってみる', new_user_registration_path, class: "block w-full text-base text-center mr-4 text-yellow-50 bg-yellow-900 px-5 py-2.5" %>
 </div>
